# spreadsheet-llm

./: .gitignore  IndexColumnConverter.py  README.md  SheetCompressor.py  SpreadsheetLLM.py  SpreadsheetLLMWrapper.py  chatbot.py  main.py  pyproject.toml  pytest.ini  requirements.txt  test_CellRangeUtils.py  test_coordinate_conversion.py
.claude/skills/list-sheets/: SKILL.md
.claude/skills/spreadsheet-llm-cli/: SKILL.md
src/spreadsheet_llm/: CellRangeUtils.py  IndexColumnConverter.py  SheetCompressor.py  SpreadsheetLLMWrapper.py  __init__.py  cell_range_utils.py  range_compressor.py  sheet_compressor.py  spreadsheet_llm.py  spreadsheet_llm_wrapper.py  unified_workbook.py
tests/: analyze_results.py  test_CellRangeUtils.py  test_cell_range_utils.py  test_coordinate_conversion.py  test_unified_workbook.py
tools/: list-sheets.py  spreadsheet-llm-cli.py
