[project]
name = "spreadsheet-llm-unofficial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.2",
    "numpy",
    "huggingface_hub",
    "openai",
    "streamlit",
    "openpyxl>=3.1.5",
    "termcolor>=3.1.0",
    "langchain-openai>=1.0.1",
    "langchain>=1.0.2",
    "pydantic>=2.12.3",
]
