[project]
name = "spreadsheet-llm"
version = "0.0.1"
description = "A Python package for spreadsheet compression and LLM-based analysis using the SpreadsheetLLM methodology"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Yang", email = "your.email@example.com" }]
keywords = ["spreadsheet", "llm", "compression"]
dependencies = [
    "langchain>=1.0.2",
    "langchain-openai>=1.0.1",
    "numpy",
    "openpyxl>=3.1.5",
    "pandas>=2.2",
    "pydantic>=2.12.3",
    "streamlit",
    "termcolor>=3.1.0",
]



[tool.hatch.build]
packages = ["src/spreadsheet_llm"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
