[project]
name = "spreadsheet-llm"
version = "0.0.1"
description = "A Python package for spreadsheet compression and LLM-based analysis using the SpreadsheetLLM methodology"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Yang" }]
keywords = ["spreadsheet", "llm", "compression"]
dependencies = [
    "claude-agent-sdk>=0.1.6",
    "dotenv>=0.9.9",
    "langchain>=1.0.2",
    "langchain-openai>=1.0.1",
    "numpy",
    "openpyxl>=3.1.5",
    "pandas>=2.2",
    "prompt-toolkit>=3.0.52",
    "pydantic>=2.12.3",
    "pytest>=8.4.2",
    "pyxlsb>=1.0.10",
    "rich>=14.2.0",
    "streamlit",
    "termcolor>=3.1.0",
]


[tool.hatch.build]
packages = ["packages/spreadsheet_llm"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
